@@ -1,6 +1,0 @@
-aKode is a simple audio decoding framework that provides a uniform interface
-to decode the most common audio formats. It also has a direct playback option
-for a number of audio outputs.
-
-This package provides the ffmpeg plugin for aKode which allows decoding many
-audio formats using ffmpeg library.
